changes.. not done

--- a/turkeycc/news.html
+++ b/turkeycc/news.html
@@ -48,11 +48,122 @@
 					-->	
 
 				<!-- Main -->
-					<div id="main">
-						<div class="inner">
-							<h1>News</h1>
-							<span class="image main"><img src="images/hal-gatewood-tZc3vjPCk-Q-unsplash1152x326r72.jpg" alt="Photo of a person reading a newspaper. Superimposed on a blurred forest background." /></span>
+				<div id="main">
+					<div class="inner">
+						<h1>News</h1>
+						<span class="image main"><img src="images/julius-drost-nsrSyI-JUYg-unsplashBanner.jpeg" alt="Photo of a person reading a newspaper. Superimposed on a blurred forest background." /></span>
 
+						<!-- begin day1 summary -->
+						<section id="day1">
+							<div class="container col-md-12">
+								
+								<h2 class="text-center">Day1</h2>
+								<p>
+									We made it through our first day! We'd like to thank and congratulate our students for their energy and enthusiasm; our students' parents for their ongoing support and encouragement; our mentors for making each day exciting, engaging, and entertaining; and our team for their organization, coordination and commitment to making this a reality. Without you all, we wouldn't be here.
+								</p>
+								<p>
+									Computer Science is challenging and exciting, learning to code is so important to teach students how to communicate and think logically. Coding helps students understand the world around them better. Coding fosters creativity and allows students to apply their creative thinking skills. Joining the MSU x Izmir Sev Coding Club is a great way to learn these skills in a challenging, engaging, and positive environment. The challenges you overcome, the views you enjoy, and the friends you make are what it's all about. 
+								</p>
+								<p>
+									Before we dive into a full recap of our first meeting, we've got a few announcements.
+								</p>
+
+
+								<!-- announcements -->
+								<h4 class="text-center">Announcements</h4>
+								<ul>
+
+									<h4>1. Looking Back</h4>
+									<p>
+										Can you believe we've already completed our first meeting? Time flies when you're having fun! So far, we've covered the basics of Python!
+										Check out our <a href="resources.html">resources</a> page for the slides from each meeting.
+									</p>
+									<h4>2. Looking Ahead</h4>
+									<p>
+										Remember that <b>we meet every day from 16:30-18:00 TRT through the 10th of June!</b> 
+									</p>
+									<h4>5. Questions?</h4>
+									<p>
+										As always, please reach out with any questions / concerns / ideas / feedback to <a href="mailto:turkeycc@egr.msu.edu">turkeycc@egr.msu.edu</a>.
+									</p>
+								</ul>
+
+
+								<!-- meeting recap -->
+								<h4 class="text-center">Meeting Recap</h4>
+								<p>
+									Our first meeting was an absolute blast, featuring a healthy mix of icebreakers, collaborative code-alongs, and hands-on exercises. Meeting 1 included a Zoom orientation and program overview!
+								</p>
+								<div align="middle" class="col-md-12">
+									<div class="row">
+										<div class="col-md-6" align="middle">
+											<img class="shadow-lg" src="images/day1/day101.png" width=60%>
+										</div>
+										<div class="col-md-6" align="middle">
+											<img class="shadow-lg" src="images/day1/day102.png" width=60%>
+										</div>
+									</div>
+									<br>
+									<div class="row">
+										<div class="col-md-6" align="middle">
+											<img class="shadow-lg" src="images/day1/day103.png" width=60%>
+										</div>
+										<div class="col-md-6" align="middle">
+											<img class="shadow-lg" src="images/day1/day104.png" width=60%>
+										</div>
+									</div>
+									<br>
+									<div class="row">
+										<div class="col-md-6" align="middle">
+											<img class="shadow-lg" src="images/day1/day105.png" width=60%>
+										</div>
+										<div class="col-md-6" align="middle">
+											<img class="shadow-lg" src="images/day1/day106.png" width=60%>
+										</div>
+									</div>
+									<br>
+									<div class="row">
+										<div class="col-md-6" align="middle">
+											<img class="shadow-lg" src="images/day1/day107.png" width=60%>
+										</div>
+										<div class="col-md-6" align="middle">
+											<img class="shadow-lg" src="images/day1/day108.png" width=60%>
+										</div>
+									</div>
+									<br>
+									<div class="row">
+										<div class="col-md-6" align="middle">
+											<img class="shadow-lg" src="images/day1/day109.png" width=60%>
+										</div>
+										<div class="col-md-6" align="middle">
+											<img class="shadow-lg" src="images/day1/day110.png" width=60%>
+										</div>
+									</div>
+									<br>
+									<div class="row">
+										<div class="col-md-6" align="middle">
+											<img class="shadow-lg" src="images/day1/day111.png" width=60%>
+										</div>
+										<div class="col-md-6" align="middle">
+											<img class="shadow-lg" src="images/day1/day112.png" width=60%>
+										</div>
+									</div>
+									<br>
+								</div>
+								<p>
+									Above are a few key slides from our first meeting to give an idea of what we've been up to. Be sure to check out our <a href="resources.html">resources</a> page for the full set of slides from each meeting!
+								</p>
+
+							
+									<!-- closure -->
+									<p>
+										Stay strong this week, coders!
+										<br>
+										<b>-The MSU x Izmir Sev Team</b>
+									</p>
+								</div>
+							</section>
+							<!-- end day 1 summary -->
 
 							<!-- begin intro -->
 							<section>
