--- a/turkeycc/resources.html
+++ b/turkeycc/resources.html
@@ -48,6 +48,17 @@
 								<p>
 									Slides from each meeting will be posted here for students to review.
                 				</p>
+								<ul>
+									<li style="list-style: disc;">
+										<a href="https://docs.google.com/presentation/d/16JcQRp1tQ4UM_EGMG9X7i7B3vqF5e52rzUL6QlDZaf4/edit?usp=sharing" target="_blank">01 - Orientation & Intro to Python - 5.30.22</a>
+									</li>
+									<li style="list-style: disc;">
+										<a href="https://docs.google.com/presentation/d/18_RRJOoO4J6NBTnmHCjY3_wuhn4t3PhrDukVda8BfSw/edit?usp=sharing" target="_blank">02 - Intro to Python Review - 5.31.22</a>
+									</li>
+									<li style="list-style: disc;">
+										<a href="https://docs.google.com/presentation/d/1sz_LjVhWDYWQRY2V5b1C4WPWLG-5Jr27JOoqoUWGjzs/edit?usp=sharing" target="_blank">03 - For Loops - 6.01.22</a>
+									</li>
+								</ul>
 							</section>
 							
 
