--- a/turkeycc/resources.html
+++ b/turkeycc/resources.html
@@ -58,6 +58,12 @@
 									<li style="list-style: disc;">
 										<a href="https://docs.google.com/presentation/d/1sz_LjVhWDYWQRY2V5b1C4WPWLG-5Jr27JOoqoUWGjzs/edit?usp=sharing" target="_blank">03 - For Loops - 6.01.22</a>
 									</li>
+									<li style="list-style: disc;">
+										<a href="https://docs.google.com/presentation/d/1L5-ww_ZDCTghb_KaLTvdFd6716XONgAXsNmiiSjgzMo/edit?usp=sharing" target="_blank">04 - For Loops Review - 6.02.22</a>
+									</li>
+									<li style="list-style: disc;">
+										<a href="https://docs.google.com/presentation/d/1PJU0an3Dh3zCS_fekfeR6WA6FVxhyeey0ZgH6XNMpV4/edit?usp=sharing" target="_blank">05 - Functions - 6.03.22</a>
+									</li>
 								</ul>
 							</section>
 							
