--- a/turkeycc/news.html
+++ b/turkeycc/news.html
@@ -9,6 +9,7 @@
 		<title>News - MSU x İzmir SEV Coding Club</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
@@ -108,55 +109,55 @@
 							<div align="middle" class="col-md-12">
 								<div class="row">
 									<div class="col-md-6" align="middle">
-										<img class="shadow-lg" src="images/day5/day501.png" width=60%>
+										<img class="shadow-lg" src="images/day5/day501.png" width=90%>
 									</div>
 									<div class="col-md-6" align="middle">
-										<img class="shadow-lg" src="images/day5/day502.png" width=60%>
-									</div>
-								</div>
-								<br>
-								<div class="row">
-									<div class="col-md-6" align="middle">
-										<img class="shadow-lg" src="images/day5/day503.png" width=60%>
-									</div>
-									<div class="col-md-6" align="middle">
-										<img class="shadow-lg" src="images/day5/day504.png" width=60%>
+										<img class="shadow-lg" src="images/day5/day502.png" width=90%>
 									</div>
 								</div>
 								<br>
 								<div class="row">
 									<div class="col-md-6" align="middle">
-										<img class="shadow-lg" src="images/day5/day505.png" width=60%>
+										<img class="shadow-lg" src="images/day5/day503.png" width=90%>
 									</div>
 									<div class="col-md-6" align="middle">
-										<img class="shadow-lg" src="images/day5/day506.png" width=60%>
-									</div>
-								</div>
-								<br>
-								<div class="row">
-									<div class="col-md-6" align="middle">
-										<img class="shadow-lg" src="images/day5/day507.png" width=60%>
-									</div>
-									<div class="col-md-6" align="middle">
-										<img class="shadow-lg" src="images/day5/day508.png" width=60%>
+										<img class="shadow-lg" src="images/day5/day504.png" width=90%>
 									</div>
 								</div>
 								<br>
 								<div class="row">
 									<div class="col-md-6" align="middle">
-										<img class="shadow-lg" src="images/day5/day509.png" width=60%>
+										<img class="shadow-lg" src="images/day5/day505.png" width=90%>
 									</div>
 									<div class="col-md-6" align="middle">
-										<img class="shadow-lg" src="images/day5/day510.png" width=60%>
+										<img class="shadow-lg" src="images/day5/day506.png" width=90%>
 									</div>
 								</div>
 								<br>
 								<div class="row">
 									<div class="col-md-6" align="middle">
-										<img class="shadow-lg" src="images/day5/day511.png" width=60%>
+										<img class="shadow-lg" src="images/day5/day507.png" width=90%>
 									</div>
 									<div class="col-md-6" align="middle">
-										<img class="shadow-lg" src="images/day5/day512.png" width=60%>
+										<img class="shadow-lg" src="images/day5/day508.png" width=90%>
+									</div>
+								</div>
+								<br>
+								<div class="row">
+									<div class="col-md-6" align="middle">
+										<img class="shadow-lg" src="images/day5/day509.png" width=90%>
+									</div>
+									<div class="col-md-6" align="middle">
+										<img class="shadow-lg" src="images/day5/day510.png" width=90%>
+									</div>
+								</div>
+								<br>
+								<div class="row">
+									<div class="col-md-6" align="middle">
+										<img class="shadow-lg" src="images/day5/day511.png" width=90%>
+									</div>
+									<div class="col-md-6" align="middle">
+										<img class="shadow-lg" src="images/day5/day512.png" width=90%>
 									</div>
 								</div>
 								<br>
@@ -232,28 +233,28 @@
 							<div align="middle" class="col-md-12">
 								<div class="row">
 									<div class="col-md-6" align="middle">
-										<img class="shadow-lg" src="images/day4/day401.png" width=60%>
+										<img class="shadow-lg" src="images/day4/day401.png" width=90%>
 									</div>
 									<div class="col-md-6" align="middle">
-										<img class="shadow-lg" src="images/day4/day402.png" width=60%>
-									</div>
-								</div>
-								<br>
-								<div class="row">
-									<div class="col-md-6" align="middle">
-										<img class="shadow-lg" src="images/day4/day403.png" width=60%>
-									</div>
-									<div class="col-md-6" align="middle">
-										<img class="shadow-lg" src="images/day4/day404.png" width=60%>
+										<img class="shadow-lg" src="images/day4/day402.png" width=90%>
 									</div>
 								</div>
 								<br>
 								<div class="row">
 									<div class="col-md-6" align="middle">
-										<img class="shadow-lg" src="images/day4/day405.png" width=60%>
+										<img class="shadow-lg" src="images/day4/day403.png" width=90%>
 									</div>
 									<div class="col-md-6" align="middle">
-										<img class="shadow-lg" src="images/day4/day406.png" width=60%>
+										<img class="shadow-lg" src="images/day4/day404.png" width=90%>
+									</div>
+								</div>
+								<br>
+								<div class="row">
+									<div class="col-md-6" align="middle">
+										<img class="shadow-lg" src="images/day4/day405.png" width=90%>
+									</div>
+									<div class="col-md-6" align="middle">
+										<img class="shadow-lg" src="images/day4/day406.png" width=90%>
 									</div>
 								</div>
 								<br>
@@ -319,16 +320,16 @@
 							<div align="middle" class="col-md-12">
 								<div class="row">
 									<div class="col-md-6" align="middle">
-										<img class="shadow-lg" src="images/day/day301.png" width=60%>
+										<img class="shadow-lg" src="images/day/day301.png" width=90%>
 									</div>
 									<div class="col-md-6" align="middle">
-										<img class="shadow-lg" src="images/day/day302.png" width=60%>
+										<img class="shadow-lg" src="images/day/day302.png" width=90%>
 									</div>
 								</div>
 								<br>
 								<div class="row">
 									<div class="col-md-6" align="middle">
-										<img class="shadow-lg" src="images/day/day303.png" width=60%>
+										<img class="shadow-lg" src="images/day/day303.png" width=90%>
 									</div>
 								<br>
 							</div>
@@ -401,37 +402,37 @@
 								<div align="middle" class="col-md-12">
 									<div class="row">
 										<div class="col-md-6" align="middle">
-											<img class="shadow-lg" src="images/day2/day201.png" width=60%>
+											<img class="shadow-lg" src="images/day2/day201.png" width=90%>
 										</div>
 										<div class="col-md-6" align="middle">
-											<img class="shadow-lg" src="images/day2/day202.png" width=60%>
-										</div>
-									</div>
-									<br>
-									<div class="row">
-										<div class="col-md-6" align="middle">
-											<img class="shadow-lg" src="images/day2/day203.png" width=60%>
-										</div>
-										<div class="col-md-6" align="middle">
-											<img class="shadow-lg" src="images/day2/day204.png" width=60%>
+											<img class="shadow-lg" src="images/day2/day202.png" width=90%>
 										</div>
 									</div>
 									<br>
 									<div class="row">
 										<div class="col-md-6" align="middle">
-											<img class="shadow-lg" src="images/day2/day205.png" width=60%>
+											<img class="shadow-lg" src="images/day2/day203.png" width=90%>
 										</div>
 										<div class="col-md-6" align="middle">
-											<img class="shadow-lg" src="images/day2/day206.png" width=60%>
+											<img class="shadow-lg" src="images/day2/day204.png" width=90%>
 										</div>
 									</div>
 									<br>
 									<div class="row">
 										<div class="col-md-6" align="middle">
-											<img class="shadow-lg" src="images/day2/day207.png" width=60%>
+											<img class="shadow-lg" src="images/day2/day205.png" width=90%>
 										</div>
 										<div class="col-md-6" align="middle">
-											<img class="shadow-lg" src="images/day2/day208.png" width=60%>
+											<img class="shadow-lg" src="images/day2/day206.png" width=90%>
+										</div>
+									</div>
+									<br>
+									<div class="row">
+										<div class="col-md-6" align="middle">
+											<img class="shadow-lg" src="images/day2/day207.png" width=90%>
+										</div>
+										<div class="col-md-6" align="middle">
+											<img class="shadow-lg" src="images/day2/day208.png" width=90%>
 										</div>
 									</div>
 									<br>
@@ -495,64 +496,64 @@
 								<div align="middle" class="col-md-12">
 									<div class="row">
 										<div class="col-md-6" align="middle">
-											<img class="shadow-lg" src="images/day1/day101.png" width=60%>
+											<img class="shadow-lg" src="images/day1/day101.png" width=90%>
 										</div>
 										<div class="col-md-6" align="middle">
-											<img class="shadow-lg" src="images/day1/day102.png" width=60%>
-										</div>
-									</div>
-									<br>
-									<div class="row">
-										<div class="col-md-6" align="middle">
-											<img class="shadow-lg" src="images/day1/day103.png" width=60%>
-										</div>
-										<div class="col-md-6" align="middle">
-											<img class="shadow-lg" src="images/day1/day104.png" width=60%>
+											<img class="shadow-lg" src="images/day1/day102.png" width=90%>
 										</div>
 									</div>
 									<br>
 									<div class="row">
 										<div class="col-md-6" align="middle">
-											<img class="shadow-lg" src="images/day1/day105.png" width=60%>
+											<img class="shadow-lg" src="images/day1/day103.png" width=90%>
 										</div>
 										<div class="col-md-6" align="middle">
-											<img class="shadow-lg" src="images/day1/day106.png" width=60%>
-										</div>
-									</div>
-									<br>
-									<div class="row">
-										<div class="col-md-6" align="middle">
-											<img class="shadow-lg" src="images/day1/day107.png" width=60%>
-										</div>
-										<div class="col-md-6" align="middle">
-											<img class="shadow-lg" src="images/day1/day108.png" width=60%>
+											<img class="shadow-lg" src="images/day1/day104.png" width=90%>
 										</div>
 									</div>
 									<br>
 									<div class="row">
 										<div class="col-md-6" align="middle">
-											<img class="shadow-lg" src="images/day1/day109.png" width=60%>
+											<img class="shadow-lg" src="images/day1/day105.png" width=90%>
 										</div>
 										<div class="col-md-6" align="middle">
-											<img class="shadow-lg" src="images/day1/day110.png" width=60%>
-										</div>
-									</div>
-									<br>
-									<div class="row">
-										<div class="col-md-6" align="middle">
-											<img class="shadow-lg" src="images/day1/day111.png" width=60%>
-										</div>
-										<div class="col-md-6" align="middle">
-											<img class="shadow-lg" src="images/day1/day112.png" width=60%>
+											<img class="shadow-lg" src="images/day1/day106.png" width=90%>
 										</div>
 									</div>
 									<br>
 									<div class="row">
 										<div class="col-md-6" align="middle">
-											<img class="shadow-lg" src="images/day1/day11111.png" width=60%>
+											<img class="shadow-lg" src="images/day1/day107.png" width=90%>
 										</div>
 										<div class="col-md-6" align="middle">
-											<img class="shadow-lg" src="images/day1/day111123.png" width=60%>
+											<img class="shadow-lg" src="images/day1/day108.png" width=90%>
+										</div>
+									</div>
+									<br>
+									<div class="row">
+										<div class="col-md-6" align="middle">
+											<img class="shadow-lg" src="images/day1/day109.png" width=90%>
+										</div>
+										<div class="col-md-6" align="middle">
+											<img class="shadow-lg" src="images/day1/day110.png" width=90%>
+										</div>
+									</div>
+									<br>
+									<div class="row">
+										<div class="col-md-6" align="middle">
+											<img class="shadow-lg" src="images/day1/day111.png" width=90%>
+										</div>
+										<div class="col-md-6" align="middle">
+											<img class="shadow-lg" src="images/day1/day112.png" width=90%>
+										</div>
+									</div>
+									<br>
+									<div class="row">
+										<div class="col-md-6" align="middle">
+											<img class="shadow-lg" src="images/day1/day11111.png" width=90%>
+										</div>
+										<div class="col-md-6" align="middle">
+											<img class="shadow-lg" src="images/day1/day111123.png" width=90%>
 										</div>
 									</div>
 									<br>
