--- a/turkeycc/index.html
+++ b/turkeycc/index.html
@@ -152,7 +152,7 @@
 								<div class="col-6 col-12-narrower">
 
 									<section>
-										<a href="resources.html" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+										<a href="resources.html" class="image featured"><img src="images/table.jpg" alt="Image of study material from Unsplash" /></a>
 										<header>
 											<h3>Resources</h3>
 										</header>
@@ -163,7 +163,7 @@
 								<div class="col-6 col-12-narrower">
 
 									<section>
-										<a href="news.html" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="news.html" class="image featured"><img src="images/turk1.jpg" alt="Image of Turkey from Unsplash" /></a>
 										<header>
 											<h3>News</h3>
 										</header>
@@ -176,7 +176,7 @@
 								<div class="col-6 col-12-narrower">
 
 									<section>
-										<a href="supporters.html" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+										<a href="supporters.html" class="image featured"><img src="images/flag2.jpg" alt="Image of Turkey flag from Unsplash" /></a>
 										<header>
 											<h3>Supporters</h3>
 										</header>
@@ -187,7 +187,7 @@
 								<div class="col-6 col-12-narrower">
 
 									<section>
-										<a href="tcc_team.html" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
+										<a href="tcc_team.html" class="image featured"><img src="images/outreach.png" alt="Image of MSU mentors teaching school students" /></a>
 										<header>
 											<h3>Team</h3>
 										</header>
