--- a/turkeycc/tcc_team.html
+++ b/turkeycc/tcc_team.html
@@ -60,14 +60,14 @@
 									</center>
 								</div>
 
-								<div class="col-4"><span class="image fit"><img src="images/teamPhotos/jonathan750x1000_78R.jpg" alt="Photo of Jonathon " /></span>
+								<div class="col-4"><span class="image fit"><img src="images/teamPhotos/jonathan750x1000_78R.jpg" alt="Photo of Jonathon" /></span>
 									<center>
 										<h3>Jonathon Moore</h3>
 										Senior | Computer Science
 									</center>
 								</div>
 
-								<div class="col-4"><span class="image fit"><img src="images/teamPhotos/judy750x1000.jpg" alt="Photo of Joao Vitor" /></span>
+								<div class="col-4"><span class="image fit"><img src="images/teamPhotos/judy750x1000.jpg" alt="Photo of Judy" /></span>
 									<center>
 										<h3>Judy Effendi</h3>
 										Junior | Computer Science
@@ -81,14 +81,14 @@
 									</center>
 								</div>
 
-								<div class="col-4"><span class="image fit"><img src="" alt="Photo of Khushi" /></span>
+								<div class="col-4"><span class="image fit"><img src="images/teamPhotos/Robin.JPG" alt="Photo of Robin" /></span>
 									<center>
 										<h3>Robin Onsay</h3>
-										Year | Major
+										Senior | Computer Science
 									</center>
 								</div>
 
-								<div class="col-4"><span class="image fit"><img src="" alt="Photo of Khushi" /></span>
+								<div class="col-4"><span class="image fit"><img src="images/teamPhotos/Sanaye.jpg" alt="Photo of Sanaye" /></span>
 									<center>
 										<h3>Sanaye Lewis</h3>
 										Freshman | Computer Science
@@ -106,17 +106,10 @@
 									</center>
 								</div>
 
-								<div class="col-4"><span class="image fit"><img src="images/teamPhotos/teresa750x1000_78R.jpg" alt="Photo of Teresa" /></span>
+								<div class="col-4"><span class="image fit"><img src="images/teamPhotos/Onsa.jpg" alt="Photo of Teresa" /></span>
 									<center>
 										<h3>Sebnem</h3>
 										Director<br>WIE Recruitment &amp; K12 Outreach<br>MSU
-									</center>
-								</div>
-
-								<div class="col-4"><span class="image fit"><img src="images/teamPhotos/LaurieCSforALL.jpg" alt="Photo of Laura" /></span>
-									<center>
-										<h3>Laura</h3>
-										Professor Emeritus<br> Comp. Sci. &amp; Eng.<br>MSU
 									</center>
 								</div>
 
