--- a/turkeycc/tcc_team.html
+++ b/turkeycc/tcc_team.html
@@ -106,10 +106,10 @@
 									</center>
 								</div>
 
-								<div class="col-4"><span class="image fit"><img src="images/teamPhotos/Onsa.jpg" alt="Photo of Teresa" /></span>
+								<div class="col-4"><span class="image fit"><img src="images/teamPhotos/Onsa.jpg" alt="Photo of Sebnem" /></span>
 									<center>
 										<h3>Sebnem</h3>
-										Director<br>WIE Recruitment &amp; K12 Outreach<br>MSU
+										Teaching Specialist<br>Computer Science &amp; Engineering<br>MSU
 									</center>
 								</div>
 
