day 6 and resources changes

--- a/turkeycc/news.html
+++ b/turkeycc/news.html
@@ -54,6 +54,112 @@
 						<h1>News</h1>
 						<span class="image main"><img src="images/julius-drost-nsrSyI-JUYg-unsplashBanner.jpeg" alt="Photo of a person reading a newspaper. Superimposed on a blurred forest background." /></span>
 
+					<!-- begin day6 summary -->
+					<section id="day1">
+						<div class="container col-md-12">
+							
+							<h2 class="text-center">Day4</h2>
+							<p>
+								We made it through the second the week! We'd like to thank and congratulate our students for their energy and enthusiasm; our students' parents for their ongoing support and encouragement; our mentors for making each day exciting, engaging, and entertaining; and our team for their organization, coordination and commitment to making this a reality. Without you all, we wouldn't be here.
+							</p>
+							<p>
+								Computer Science is challenging and exciting, learning to code is so important to teach students how to communicate and think logically. Coding helps students understand the world around them better. Coding fosters creativity and allows students to apply their creative thinking skills. Joining the MSU x Izmir Sev Coding Club is a great way to learn these skills in a challenging, engaging, and positive environment. The challenges you overcome, the views you enjoy, and the friends you make are what it's all about. 
+							</p>
+							<p>
+								Before we dive into a full recap of our fourth meeting, we've got a few announcements.
+							</p>
+
+
+							<!-- announcements -->
+							<h4 class="text-center">Announcements</h4>
+							<ul>
+
+								<h4>1. Looking Back</h4>
+								<p>
+									Can you believe we are already to our second week? Time flies when you're having fun! So far, we've covered the basics of Python and For Loops!
+									Check out our <a href="resources.html">resources</a> page for the slides from each meeting.
+								</p>
+								<h4>2. Looking Ahead</h4>
+								<p>
+									Remember that <b>we meet every day from 16:30-18:00 TRT through the 10th of June!</b> 
+								</p>
+								<h4>3. Questions?</h4>
+								<p>
+									As always, please reach out with any questions / concerns / ideas / feedback to <a href="mailto:turkeycc@egr.msu.edu">turkeycc@egr.msu.edu</a>.
+								</p>
+							</ul>
+
+
+							<!-- meeting recap -->
+							<h4 class="text-center">Meeting Recap</h4>
+							<p>
+								Our 6th meeting was an absolute blast, featuring a fun icebreaker getting to know each others cultures, collaborative code-alongs, and hands-on exercises. Meeting 1 included a Zoom orientation and program overview, Meeting 2 included an Intro to Python Review, Meeting 3 introudced For Loops, and Meeting 4 included a For Loops Review, Meeting 5 introduced Functions, and Meeting 6 included a Functions Review with some new information!
+							</p>
+
+							<p>
+								Below are some examples, review and solutions from Day 6!
+							</p>
+							<div align="middle" class="col-md-12">
+								<div class="row">
+									<div class="col-md-6" align="middle">
+										<img class="shadow-lg" src="images/day6/day601.png" width=90%>
+									</div>
+									<div class="col-md-6" align="middle">
+										<img class="shadow-lg" src="images/day6/day602.png" width=90%>
+									</div>
+								</div>
+								<br>
+								<div class="row">
+									<div class="col-md-6" align="middle">
+										<img class="shadow-lg" src="images/day6/day603.png" width=90%>
+									</div>
+									<div class="col-md-6" align="middle">
+										<img class="shadow-lg" src="images/day6/day604.png" width=90%>
+									</div>
+								</div>
+								<br>
+								<div class="row">
+									<div class="col-md-6" align="middle">
+										<img class="shadow-lg" src="images/day6/day605.png" width=90%>
+									</div>
+									<div class="col-md-6" align="middle">
+										<img class="shadow-lg" src="images/day6/day606.png" width=90%>
+									</div>
+								</div>
+								<br>
+								<div class="row">
+									<div class="col-md-6" align="middle">
+										<img class="shadow-lg" src="images/day6/day607.png" width=90%>
+									</div>
+									<div class="col-md-6" align="middle">
+										<img class="shadow-lg" src="images/day6/day608.png" width=90%>
+									</div>
+								</div>
+								<br>
+								<div class="row">
+									<div class="col-md-6" align="middle">
+										<img class="shadow-lg" src="images/day6/day609.png" width=90%>
+									</div>
+									<div class="col-md-6" align="middle">
+										<img class="shadow-lg" src="images/day6/day610.png" width=90%>
+									</div>
+								</div>
+								<br>
+							</div>
+							<p>
+								Above are a few key slides from our second meeting to give an idea of what we've been up to. Be sure to check out our <a href="resources.html">resources</a> page for the full set of slides from each meeting!
+							</p>
+
+						
+								<!-- closure -->
+								<p>
+									Stay strong this week, coders!
+									<br>
+									<b>-The MSU x Izmir Sev Team</b>
+								</p>
+							</div>
+						</section>
+						<!-- end day 6 summary -->	
 					<!-- begin day5 summary -->
 					<section id="day1">
 						<div class="container col-md-12">
@@ -176,7 +282,7 @@
 								</p>
 							</div>
 						</section>
-						<!-- end day 3 summary -->
+						<!-- end day 5 summary -->
 
 					<!-- begin day4 summary -->
 					<section id="day1">
