--- a/turkeycc/resources.html
+++ b/turkeycc/resources.html
@@ -64,6 +64,21 @@
 									<li style="list-style: disc;">
 										<a href="https://docs.google.com/presentation/d/1PJU0an3Dh3zCS_fekfeR6WA6FVxhyeey0ZgH6XNMpV4/edit?usp=sharing" target="_blank">05 - Functions - 6.03.22</a>
 									</li>
+									<li style="list-style: disc;">
+										<a href="https://docs.google.com/presentation/d/1lgTH9Ht2sg6fRatO9HSGePxG_67bIjBxkpzfoenbixM/edit?usp=sharing" target="_blank">06 - Functions Review - 6.06.22</a>
+									</li>
+									<li style="list-style: disc;">
+										<a href="https://docs.google.com/presentation/d/1W5xirRAFKSN-D0LwMvwDS7V0kUUgxBAszKDgrF7nzO8/edit?usp=sharing" target="_blank">07 - Variables, Input, and Parameters - 6.07.22</a>
+									</li>
+									<li style="list-style: disc;">
+										<a href="https://docs.google.com/presentation/d/16AeZ6dihNZTbHjoDioLSo4I3Ix8kjHrqtd0CRuPPdZk/edit?usp=sharing" target="_blank">08 - Variables, Input, and Parameters Review - 6.08.22</a>
+									</li>
+									<li style="list-style: disc;">
+										<a href="https://docs.google.com/presentation/d/1AdTkJSvWcXc2rr0FoiuQsmXLOWkC1eZhcvPcMi3sT7M/edit?usp=sharing" target="_blank">09 - Kahoot and Final Project - 6.09.22</a>
+									</li>
+									<li style="list-style: disc;">
+										<a href="https://docs.google.com/presentation/d/1KjbCLpVroG_U4goJ4M9HnRsz1Y0KBEpGxzBsU26JU3w/edit?usp=sharing" target="_blank">10 - Final Celebration - 6.10.22</a>
+									</li>
 								</ul>
 							</section>
 							
