--- a/turkeycc/news.html
+++ b/turkeycc/news.html
@@ -105,7 +105,7 @@
 							<p>
 								Thank you for your time, Zeynep!
 							</p>
-							<span class="image main"><img src="images/day7/Screen Shot 2022-06-07 at 9.34.32 AM.png" alt="Photo Gigi Live Spotlight!"></span>
+							<span class="image main"><img src="images/day9/zeynepspotlight.png" alt="Photo Gigi Live Spotlight!"></span>
 							<p>
 								Below are some slides from Day 9!
 							</p>
